--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51">
@@ -45,7 +47,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary fw-bold m-0">Zahid Hasan Loshan</h1>
+            <h3 class="text-primary fw-bold m-0">Zahid Hasan Loshan</h3>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -58,7 +60,7 @@
                 <a href="#service" class="nav-item nav-link">Services</a>
             </div>
             <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
-                <h1 class="text-primary fw-bold m-0">Zahid Hasan Loshan</h1>
+                <h3 class="text-primary fw-bold m-0">Zahid Hasan Loshan</h3>
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">Projects</a>
@@ -77,11 +79,12 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 py-6 pb-0 pt-lg-0">
                     <h3 class="text-primary mb-3">I'm</h3>
-                    <h1 class="display-3 mb-3">Zahid Hasan Loshan</h1>
+                    <h3 class="display-3 mb-3">Zahid Hasan Loshan</h3>
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Junior Backend Developer, Web Developer</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="https://drive.google.com/uc?export=download&id=1-DI2wzOg7P58nZ6wPT7XMrtxguis1D4w" class="btn btn-primary py-3 px-4 me-5" id="downloadLink">Download CV</a>
+
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
@@ -133,8 +136,8 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="d-flex align-items-center mb-5">
                         <div class="years flex-shrink-0 text-center me-4">
-                            <h1 class="display-1 mb-0">9</h1>
-                            <h5 class="mb-0">Months</h5>
+                            <h3 class="display-1 mb-0">9</h3>
+                            <h5 class="mb-0" style="font-size: 10px;">Months</h5>
                         </div>
                         <h3 class="lh-base mb-0">of working experience as a Junior Backend developer</h3>
                     </div>
@@ -409,7 +412,7 @@
                         <img class="img-fluid" src="img/project-2.jpg" alt="">
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://admin.shikkha.xyz/login" target="_blank"><i class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://admin.shikkhatech.dev/login" target="_blank"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -418,7 +421,7 @@
                         <img class="img-fluid" src="img/project-3.jpg" alt="">
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://admin.shikkhatech.dev/login" target="_blank"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -436,7 +439,7 @@
                         <img class="img-fluid" src="img/project-5.jpg" alt="">
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-5.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://classicnewsportal.com/" target="_blank"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -475,7 +478,7 @@
                                 <h5>Md. Hasibul Hasan</h5>
                                 <span>Full-Stack Developer</span>
                             </div>
-                            <a href=https://www.linkedin.com/in/mdhasibulhasan294/"><i class="fa fa-arrow-right fa-2x text-primary"></i></a>
+                            <a href=https://www.linkedin.com/in/mdhasibulhasan294/" target="_blank"><i class="fa fa-arrow-right fa-2x text-primary"></i></a>
                         </div>
                     </div>
                 </div>
@@ -487,7 +490,7 @@
                                 <h5>Ashraful Islam</h5>
                                 <span>Front-End Developer </span>
                             </div>
-                            <a href="https://www.linkedin.com/in/ashrafulislam7/"><i class="fa fa-arrow-right fa-2x text-primary"></i></a>
+                            <a href="https://ashrafulislamsayem.netlify.app/" target="_blank"><i class="fa fa-arrow-right fa-2x text-primary"></i></a>
                         </div>
                     </div>
                 </div>
@@ -499,7 +502,7 @@
                                 <h5>Mahadi Hassan Babu</h5>
                                 <span>Full Stack Web Developer</span>
                             </div>
-                            <a href="  https://www.linkedin.com/in/mahadi-hassan-babu-659123211/"><i class="fa fa-arrow-right fa-2x text-primary"></i></a>
+                            <a href="https://mhbabu.github.io/" target="_blank"><i class="fa fa-arrow-right fa-2x text-primary"></i></a>
                         </div>
                     </div>
                 </div>
@@ -606,7 +609,7 @@
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="mb-4">For any emergencies, please contact me directly. Your prompt communication is crucial, and I am readily available to assist.</p>
-                    <form>
+                    <form class="contact-form">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
@@ -649,7 +652,8 @@
         <div class="container-xxl pt-5 px-0">
             <div class="bg-dark">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.091097687367!2d90.4164172153924!3d23.79253298458491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755f8d74c7f57d1%3A0x2582a87b5ecbb135!2sGulshan%202%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                 
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1825.342400613661!2d90.430864!3d23.794236!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c7c7137acf3d%3A0xa1e579e33ba912d4!2sRajdhani%20Pilot%20High%20School!5e0!3m2!1sen!2sbd!4v1700071777145!5m2!1sen!2sbd"
                     frameborder="0" style="width: 100%; height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
             </div>
@@ -694,7 +698,6 @@
     <script src="js/main.js"></script>
 
     <!-- Mail Send -->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <script>
         const form = document.querySelector("form.contact-form");
@@ -707,11 +710,11 @@
             let message = document.getElementById("message").value;
 
             if (name === "") {
-                document.getElementById("mytext").innerHTML = "Please enter Name";
+                alert("Please enter Name");
             } else if (email === "") {
-                document.getElementById("mytext").innerHTML = "Please enter Email";
+                alert("Please enter Email");
             } else {
-                document.querySelector(".contact-form").reset();
+                form.reset();
 
                 sendEmail(name, email, subject, message);
             }
@@ -719,22 +722,45 @@
 
         function sendEmail(name, email, subject, message) {
             Email.send({
-                Host: "smtp.gmail.com",
-                Username: "zabir6093@gmail.com",
-                Password: "egwxnuytllurpgmi",
-                To: "zabir6093@gmail.com",
-                From: "zabir6093@gmail.com",
+                SecureToken: "384c337a-add6-47b5-96f8-baca33d6f222",
+                To: "zahid.shikkha@gmail.com",
+                From: "flavivivax@gmail.com",
                 Subject: `${name} Just messaged you from the website form: ${subject}`,
                 Body: `Name: ${name} <br> Email: ${email} <br> Subject: ${subject} <br> Message: ${message} <br>`,
             })
                 .then((success) => {
-                    alert("Message sent successfully. Please check the spam folder in your mail.");
+                    alert("Message sent successfully.");
                 })
                 .catch((error) => {
                     alert("Error sending message");
                 });
         }
     </script>
+
+    <script>
+        // Function to trigger the download link
+        function downloadCV() {
+            // Replace '1-DI2wzOg7P58nZ6wPT7XMrtxguis1D4w' with your file ID
+            const fileID = '1-DI2wzOg7P58nZ6wPT7XMrtxguis1D4w';
+
+            // Construct the download link
+            const downloadLink = `https://drive.google.com/uc?export=download&id=${fileID}`;
+
+            // Create a temporary anchor element
+            const anchor = document.createElement('a');
+            anchor.href = downloadLink;
+
+            // Trigger a click on the anchor element to start the download
+            anchor.click();
+
+            // Remove the temporary anchor element
+            document.body.removeChild(anchor);
+        }
+
+        // Add click event listener to the link
+        document.getElementById('downloadLink').addEventListener('click', downloadCV);
+    </script>
+
 
 </body>
 
