--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     <h3 class="text-primary mb-3">I'm</h3>
                     <h3 class="display-3 mb-3">Zahid Hasan Loshan</h3>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Junior Backend Developer, Web Developer</div>
+                    <div class="typed-text d-none">Backend Developer, Web Developer</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="https://drive.google.com/uc?export=download&id=1-DI2wzOg7P58nZ6wPT7XMrtxguis1D4w" class="btn btn-primary py-3 px-4 me-5" id="downloadLink">Download CV</a>
-
+                        <a href="zahidloshan.pdf" class="btn btn-primary py-3 px-4 me-5" id="downloadLink">Download CV</a>
+                        
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
@@ -740,11 +740,9 @@
     <script>
         // Function to trigger the download link
         function downloadCV() {
-            // Replace '1-DI2wzOg7P58nZ6wPT7XMrtxguis1D4w' with your file ID
-            const fileID = '1-DI2wzOg7P58nZ6wPT7XMrtxguis1D4w';
-
+            
             // Construct the download link
-            const downloadLink = `https://drive.google.com/uc?export=download&id=${fileID}`;
+            const downloadLink = `zahidloshan.pdf`;
 
             // Create a temporary anchor element
             const anchor = document.createElement('a');
