--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
             h3.display-3 {
                 font-size: 2rem; /* Adjust the font size as needed */
             }
+            #downloadLink {
+            font-size: 10px;
+            padding: 10px;
+            margin-right: 0;
+            }
         }
     </style>
 
