--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="d-flex align-items-center mb-5">
                         <div class="years flex-shrink-0 text-center me-4">
-                            <h3 class="display-1 mb-0">9</h3>
+                            <h3 class="display-1 mb-0">20</h3>
                             <h5 class="mb-0" style="font-size: 10px;">Months</h5>
                         </div>
-                        <h3 class="lh-base mb-0">of working experience as a Junior Backend developer</h3>
+                        <h3 class="lh-base mb-0">of working experience in developer</h3>
                     </div>
-                    <p class="mb-4">Experienced Laravel Back-End Developer |PHP | Docker | GitHub | Crafting Robust Server-Side Solutions | Contributing to Web Development Success for Leading Organizations like <a href="https://shikkha.xyz/" target="_blank">Shikkha.xyz</a></p>
+                    <p class="mb-4">Experienced Laravel Back-End Developer |PHP | Docker | GitHub | AWS - Web Hosting Services | Contributing to Web Development Success for Leading Organizations like <a href="https://premierbankltd.com/pbl/" target="_blank">The Premier Bank PLC.</a></p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Solid Foundation in Backend Development</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Collaborative Team Player</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Commitment to Continuous Improvement</p>
@@ -220,7 +220,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="display-5 mb-5">Skills & Experience</h1>
-                    <p class="mb-4">Experienced Junior Backend Developer at Shikkha.xyz with skills in PHP, Laravel, databases, Git, Docker, problem-solving, and a strong collaborative approach.</p>
+                    <p class="mb-4">Experienced IT Officer at The Premier Bank PLC with skills in PHP, Laravel, databases, Git, Docker, problem-solving, and a strong collaborative approach.</p>
                     <h3 class="mb-4">My Skills</h3>
                     <div class="row align-items-center">
                         <div class="col-md-6">
@@ -296,19 +296,19 @@
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
+                                    <h5>Officer(IT)</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">March,2024 - Now</p>
+                                    <h6 class="mb-0">The Premier Bank PLC</h6>
+                                </div>
+                                <div class="col-sm-6">
                                     <h5>Junior Backend Developer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">September,2023 - Now</p>
+                                    <p class="text-primary mb-1">September,2023 - February,2024</p>
                                     <h6 class="mb-0">Shikkha.xyz</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Junior Backend Developer</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">May, 2023 - August,2023</p>
-                                    <h6 class="mb-0">Unico IT Limited</h6>
-                                </div>
-                                <div class="col-sm-6">
-                                    <h5>Laravel Internship</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">February, 2023 - April,2023</p>
                                     <h6 class="mb-0">Unico IT Limited</h6>
@@ -444,16 +444,16 @@
                         <img class="img-fluid" src="img/project-1.png" alt="">
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-1.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://shikkha.xyz/" target="_blank"><i class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://pbplc360.thepremierbankplc.com:448/greenpin/public/green-pin/instructions" target="_blank"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-2.jpg" alt="">
+                        <img class="img-fluid" src="img/project-2.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://admin.shikkhatech.dev/login" target="_blank"><i class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-2.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://shikkha.xyz/" target="_blank"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -462,7 +462,7 @@
                         <img class="img-fluid" src="img/project-3.jpg" alt="">
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://admin.shikkhatech.dev/login" target="_blank"><i class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://admin.shikkha.xyz/login" target="_blank"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -556,7 +556,7 @@
     <!-- Testimonial Start -->
     <div class="container-fluid bg-light py-5 my-5" id="testimonial">
         <div class="container-fluid py-5">
-            <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Testimonial</h1>
+            <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Professional Projects</h1>
             <div class="row justify-content-center">
                 <div class="col-lg-3 d-none d-lg-block">
                     <div class="testimonial-left h-100">
@@ -574,10 +574,10 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">Green PIN Service: Developed the Green PIN feature, allowing cardholders to quickly activate their cards and set their PINs.</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
-                            <span>Profession</span>
+                            <h5>The Premier Bank PLC</h5>
+                            <span>Live Project</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
@@ -586,10 +586,10 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">I contributed to the backend development and API development of Shikkha.xyz, enhancing the platform's functionality and performance for a seamless e-learning experience.</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
-                            <span>Profession</span>
+                            <h5>Shikkha.xyz</h5>
+                            <span>Live Project</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
@@ -598,10 +598,10 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">I developed a transaction monitoring system for Premier Bank, integrating it with the core banking solution to enhance real-time transaction tracking and ensure compliance.</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
-                            <span>Profession</span>
+                            <h5>The Premier Bank PLC</h5>
+                            <span>Live Project</span>
                         </div>
                     </div>
                 </div>
@@ -632,7 +632,7 @@
             <div class="row g-5">
                 <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="mb-2">My office:</p>
-                    <h3 class="fw-bold">SHIKKHA (PVT.) LTD. Level 3, House 480, Lane 8, Dhaka, 1206</h3>
+                    <h3 class="fw-bold"> IT Division (MIS) | The Premier Bank PLC | Head Office, Iqbal Centre, 10th Floor, 42 Kemal Ataturk Avenue, Banani, Dhaka - 1213</h3>
                     <hr class="w-100">
                     <p class="mb-2">Call me:</p>
                     <h3 class="fw-bold">01977838489</h3>
