--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Zahid Hasan Loshan</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+   <title>Zahid Hasan Loshan | Software Developer Portfolio</title>
 
+<meta name="description" content="Zahid Hasan Loshan is a software developer specializing in Laravel, React.js, and full-stack web development.">
+
+<meta name="keywords" content="Zahid Hasan Loshan, Zahid Hasan, Laravel Developer, React Developer, Bangladesh Developer">
+
+<meta name="author" content="Zahid Hasan Loshan">
+    <meta name="google-site-verification" content="o9OYeGHI9lgGXJpVMAzjL2WC9QuhAxxn9pSDXUVk-QA" />
     <!-- Favicon -->
     <link href="img/zahidloshan.ico" rel="icon">
 
