--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "Person",
+ "name": "Zahid Hasan Loshan",
+ "url": "https://zahidloshan.github.io/",
+ "sameAs": [
+   "https://github.com/zahidloshan"
+ ]
+}
+</script>
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
